kubernetes/apps/default/mealie/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mealie
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      name: mealie
  template:
    metadata:
      labels:
        name: mealie
    spec:
      containers:
        - name: mealie
          image: ghcr.io/mealie-recipes/mealie:nightly
          ports:
            - containerPort: 9000
          volumeMounts:
            - name: data
              mountPath: /app/data/
          resources:
            requests:
              memory: 1000M
              cpu: 1000m
            limits:
              memory: 1000M
              cpu: 1000m
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: mealie-pvc
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mealie
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: mealie.home.adityathebe.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: mealie
                port:
                  number: 9000
